# Plonky3

./: Cargo.toml  README.md
brakedown/: Cargo.toml
brakedown/benches/: encode.rs
brakedown/src/: brakedown_code.rs  dense_code.rs  lib.rs  macros.rs  mul.rs  sparse.rs  standard_fast.rs
code/: Cargo.toml
code/src/: identity.rs  registry.rs
examples/: Cargo.toml
examples/examples/: topological_router.rs
lde/: Cargo.toml
lde/src/: lib.rs  naive.rs
multi-stark/: Cargo.toml
multi-stark/src/: eq_poly.rs  folder.rs  lib.rs  proof.rs  prover.rs  verifier.rs
multi-stark/tests/: e2e.rs  scaling.rs
reed-solomon/: Cargo.toml
reed-solomon/src/: lib.rs
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs  prover.rs  tests.rs  verifier.rs  virtual_poly.rs
tensor-pcs/: Cargo.toml
tensor-pcs/src/: lib.rs  multilinear_pcs.rs  tensor_pcs.rs
tensor-pcs/tests/: scaling.rs
