[package]
name = "p3-code"
description = "Traits for error-correcting codes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-matrix.workspace = true

[dev-dependencies]
p3-mersenne-31 = { path = "../mersenne-31" }
