[package]
name = "p3-multi-stark"
description = "Multilinear STARK framework utilizing Sumcheck and Tensor PCS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air.workspace = true
p3-challenger.workspace = true
p3-code.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-multilinear-util.workspace = true
p3-sumcheck.workspace = true
p3-tensor-pcs.workspace = true
p3-util.workspace = true
tracing.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-brakedown.workspace = true
p3-keccak.workspace = true
p3-merkle-tree.workspace = true
p3-symmetric.workspace = true
rand.workspace = true
rand_chacha = "0.10"

[lints]
workspace = true
