[package]
name = "p3-reed-solomon"
description = "Reed-Solomon error-correcting codes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-code = { path = "../code" }
p3-field.workspace = true
p3-lde = { path = "../lde" }
p3-matrix.workspace = true
p3-util.workspace = true
