[package]
name = "p3-tensor-pcs"
description = "Tensor polynomial commitment scheme"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-challenger.workspace = true
p3-code.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true
p3-multilinear-util.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true

[dev-dependencies]
p3-brakedown = { path = "../brakedown" }
p3-baby-bear = { path = "../baby-bear" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-keccak = { path = "../keccak" }
p3-symmetric = { path = "../symmetric" }
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
